// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tile Snapshot tests > renders multiple dd elements 1`] = `
<div>
  <div
    class=_card _card--neutral w-full flex-col p-[1rem]
    data-ods=card
  >
    <section
      class=flex flex-col w-full
    >
      <h4
        class=_text _text--heading-4
        data-ods=text
      >
        Simple Tile
      </h4>
      <hr
        class=_divider _divider--24 w-full
        data-ods=divider
      />
      <dl
        class=flex flex-col m-0
      >
        <div
          class=flex flex-col gap-1
        >
          <dt
            class=flex justify-between
          >
            <div
              class=flex items-center gap-1 text-[var(--ods-color-text)]
            >
              <span
                class=_text _text--span font-bold
                data-ods=text
              >
                Sample Term
              </span>
            </div>
          </dt>
          <dd
            class=m-0
          >
            <span
              class=_text _text--span
              data-ods=text
            >
              Sample Description
            </span>
          </dd>
          <dd
            class=m-0
          >
            <a
              class=_link
              data-ods=link
              href=https://www.ovhcloud.com
            >
              Link
            </a>
            <hr
              class=_divider _divider--24
              data-ods=divider
            />
          </dd>
        </div>
      </dl>
    </section>
  </div>
</div>
`;

exports[`Tile Snapshot tests > renders simple tile 1`] = `
<div>
  <div
    class=_card _card--neutral w-full flex-col p-[1rem]
    data-ods=card
  >
    <section
      class=flex flex-col w-full
    >
      <h4
        class=_text _text--heading-4
        data-ods=text
      >
        Simple Tile
      </h4>
      <hr
        class=_divider _divider--24 w-full
        data-ods=divider
      />
      <dl
        class=flex flex-col m-0
      >
        <div
          class=flex flex-col gap-1
        >
          <dt
            class=flex justify-between
          >
            <div
              class=flex items-center gap-1 text-[var(--ods-color-text)]
            >
              <span
                class=_text _text--span font-bold
                data-ods=text
              >
                Sample Term
              </span>
            </div>
          </dt>
          <dd
            class=m-0
          >
            <span
              class=_text _text--span
              data-ods=text
            >
              Sample Description
            </span>
            <hr
              class=_divider _divider--24
              data-ods=divider
            />
          </dd>
        </div>
        <div
          class=flex flex-col gap-1
        >
          <dt
            class=flex justify-between
          >
            <div
              class=flex items-center gap-1 text-[var(--ods-color-text)]
            >
              <span
                class=_text _text--span font-bold
                data-ods=text
              >
                Sample Term
              </span>
            </div>
          </dt>
          <dd
            class=m-0
          >
            <span
              class=_text _text--span
              data-ods=text
            >
              Sample Description
            </span>
          </dd>
        </div>
      </dl>
    </section>
  </div>
</div>
`;

exports[`Tile Snapshot tests > renders tile term with Actions Menu 1`] = `
<div>
  <div
    class=_card _card--neutral w-full flex-col p-[1rem]
    data-ods=card
  >
    <section
      class=flex flex-col w-full
    >
      <h4
        class=_text _text--heading-4
        data-ods=text
      >
        Simple Tile
      </h4>
      <hr
        class=_divider _divider--24 w-full
        data-ods=divider
      />
      <dl
        class=flex flex-col m-0
      >
        <div
          class=flex flex-col gap-1
        >
          <dt
            class=flex justify-between
          >
            <div
              class=flex items-center gap-1 text-[var(--ods-color-text)]
            >
              <span
                class=_text _text--span font-bold
                data-ods=text
              >
                Sample Term
              </span>
            </div>
            <button
              aria-controls=:r2:
              aria-expanded=false
              aria-haspopup=dialog
              class=_button _button--primary _button--sm _button--outline _popover-trigger
              data-ods=popover-trigger
              data-part=trigger
              data-scope=popover
              data-state=closed
              dir=ltr
              id=popover::r1::trigger
              role=button
              tabindex=0
              type=button
            >
              <span
                class=_icon _icon--ellipsis-vertical
                data-ods=icon
                role=presentation
              />
            </button>
          </dt>
          <dd
            class=m-0
          >
            <span
              class=_text _text--span
              data-ods=text
            >
              Sample Description
            </span>
          </dd>
        </div>
      </dl>
    </section>
  </div>
</div>
`;

exports[`Tile Snapshot tests > renders tile term with Tooltip 1`] = `
<body>
  <div>
    <div
      class=_card _card--neutral w-full flex-col p-[1rem]
      data-ods=card
    >
      <section
        class=flex flex-col w-full
      >
        <h4
          class=_text _text--heading-4
          data-ods=text
        >
          Simple Tile
        </h4>
        <hr
          class=_divider _divider--24 w-full
          data-ods=divider
        />
        <dl
          class=flex flex-col m-0
        >
          <div
            class=flex flex-col gap-1
          >
            <dt
              class=flex justify-between
            >
              <div
                class=flex items-center gap-1 text-[var(--ods-color-text)]
              >
                <span
                  class=_text _text--span font-bold
                  data-ods=text
                >
                  Sample Term
                </span>
                <span
                  aria-describedby=tooltip::r0::content
                  class=_icon _icon--circle-question _tooltip-trigger
                  data-expanded=
                  data-ods=tooltip-trigger
                  data-part=trigger
                  data-scope=tooltip
                  data-state=open
                  dir=ltr
                  id=tooltip::r0::trigger
                  role=button
                  tabindex=0
                />
              </div>
            </dt>
            <dd
              class=m-0
            >
              <span
                class=_text _text--span
                data-ods=text
              >
                Sample Description
              </span>
            </dd>
          </div>
        </dl>
      </section>
    </div>
  </div>
  <div
    data-part=positioner
    data-scope=tooltip
    dir=ltr
    id=tooltip::r0::popper
    style=position: absolute; isolation: isolate; min-width: max-content; top: 0px; left: 0px; transform: translate3d(var(--x), var(--y), 0); z-index: var(--ods-theme-overlay-z-index);
  >
    <div
      class=_tooltip-content
      data-ods=tooltip-content
      data-part=content
      data-placement=top
      data-scope=tooltip
      data-state=open
      dir=ltr
      id=tooltip::r0::content
      role=tooltip
      style=pointer-events: auto;
    >
      <p
        class=_text _text--paragraph
        data-ods=text
      >
        Sample Tooltip Message
      </p>
    </div>
  </div>
</body>
`;
